--- a/portfolio.html
+++ b/portfolio.html
@@ -34,95 +34,124 @@
    <!--main-->
     <main>
         <!-- section portfolio-->
-       <section class="portfolio">
+    <section class="portfolio">
         <h1 class="portfolio-titel"></h1>
-    </section>
-    <!--button-->
-    <div>
-        <button type="button"class="navigation-button">All</button>
-        <button type="button"class="navigation-button">Web Site</button>
-        <button type="button"class="navigation-button">App</button>
-        <button type="button"class="navigation-button">Design</button>
-        <button type="button"class="navigation-button">Marketing</button>
-    </div>
-    <!--Section List-->
-    <section class="section list">
-        <ul class="list">
-            <li class="list-item">
-            <img 
+    
+        <!--button-->
+        <ul class="navigation-button">
+        <li><button type="button"class="navigation-button list">All</button></li>
+        <li><button type="button"class="navigation-button list">Web Site</button></li>
+        <li><button type="button"class="navigation-button list ">App</button></li>
+        <li><button type="button"class="navigation-button list">Design</button></li>
+        <li><button type="button"class="navigation-button list">Marketing</button></li>
+        </ul>
+        <!--Section List-->
+        <section class="section">
+        <ul class="list-list">
+            <li class="list-item list">
+            <a>
+                <img 
                 src="./images/img-min.jpg"
                 alt="Banking"
-                width="360"
-                />
-                <h2 class="list-titel">Banking App Interface Concept</h2>
-                <p class="list-subtitel">App</p>
-           </li>
-             <li class="list-item">
-            <img 
-                src="./images/img2-min.jpg" 
-                alt= "Payment" 
-                width="360"
-                />
-                <h2 class="list-titel">Cashless Payment</h2>
-                <p class="list-subtitel">Marketing</p>
+                width="360">
+               <div>
+                    <h2 class="list-titel">Banking App Interface Concept</h2>
+                    <p class="list-subtitel">App</p>
+                </div>
+             </a>
             </li>
-            <li class="list-item">
-                <img src="./images/img3-min.jpg" 
-                alt="Meditaion" 
-                width="360" 
-                />
-                <h2 class="list-titel">Meditaion App</h2>
-                <p class="list-subtitel">App</p>
+             <li class="list-item list">
+                <a>
+                    <img 
+                    src="./images/img2-min.jpg" 
+                    alt= "Payment" 
+                    width="360">
+               <div>
+                    <h2 class="list-titel">Cashless Payment</h2>
+                    <p class="list-subtitel">Marketing</p>
+                </div>
+                </a>
+            
+            </li>
+            <li class="list-item list">
+                <a>
+                    <img src="./images/img3-min.jpg" 
+                    alt="Meditaion" 
+                    width="360">
+                    <div>
+                        <h2 class="list-titel">Meditaion App</h2>
+                        <p class="list-subtitel">App</p>
+                    </div>
+                </a>
             </li>
 
-            <li class="list-item">
-                <img src="./images/img4-min.jpg" 
-                alt="Taxi" 
-                width="360" 
-                />
-                <h2 class="list-titel">Taxi Service</h2>
-                <p class="list-subtitel">Marketing</p>
+            <li class="list-item list">
+                <a>
+                    <img src="./images/img4-min.jpg" 
+                    alt="Taxi" 
+                    width="360">
+                    <div>
+                        <h2 class="list-titel">Taxi Service</h2>
+                        <p class="list-subtitel">Marketing</p>
+                    </div>
+                </a>
             </li>
-            <li class="list-item">
+            <li class="list-item list">
+                <a>
                 <img src="./images/img5-min.jpg" 
                 alt="Illustrations" 
-                width="360" 
-                />
+                width="360">
+                <div>
                 <h2 class="list-titel">Screen Illustrations</h2>
                 <p class="list-subtitel">Design</p>
+                </div>
+                </a>
             </li>
-            <li class="list-item">
+            <li class="list-item list">
+                <a>
                 <img src="./images/img6-min.jpg" 
                 alt="Courses" 
-                width="360"
-                 />
+                width="360">
+                <div>
                 <h2 class="list-titel">Online Courses</h2>
                 <p class="list-subtitel">Marketing</p>
+                </div>
+                </a>
             </li>
-            <li class="list-item">
+            <li class="list-item list">
+                <a>
                 <img src="./images/img7-min.jpg" 
                 alt="Instagram" 
-                width="360" />
+                width="360">
+                <div>
                 <h2 class="list-titel">Instagram Stories Concept</h2>
                 <p class="list-subtitel">Design</p>
+                </div>
+                </a>
             </li>
 
-            <li class="list-item">
+            <li class="list-item list">
+                <a>
                 <img src="./images/img8-min.jpg" 
                 alt="Organic Food" 
-                width="360" 
-                />
+                width="360">
+                <div>
                 <h2 class="list-titel">Organic Food</h2>
                 <p class="list-subtitel">Web Site</p>
+                </div>      
+                </a>
             </li>
 
-            <li class="list-item">
+            <li class="list-item list">
+                <a>
                 <img src="./images/img9-min.jpg" 
                 alt="Fresh Coffee" 
-                width="360" 
-                />
+                width="360">
+                <div>
                 <h2 class="list-titel">Fresh Coffee</h2>
                 <p class="list-subtitel">Web Site</p>
+                </div>
+                </a>
             </li>
 
          </ul>
