--- a/portfolio.html
+++ b/portfolio.html
@@ -49,24 +49,24 @@
         <section class="section">
         <ul class="list-list">
             <li class="list-item list">
-            <a>
+            <a href="" class="list-link">
                 <img 
                 src="./images/img-min.jpg"
                 alt="Banking"
-                width="360">
-               <div>
+                width="360"
+                />
+               <div class="list-card">
                     <h2 class="list-titel">Banking App Interface Concept</h2>
                     <p class="list-subtitel">App</p>
-                </div>
-             </a>
+                </div></a>
             </li>
              <li class="list-item list">
-                <a>
+                <a href="" class="list-link">
                     <img 
                     src="./images/img2-min.jpg" 
                     alt= "Payment" 
-                    width="360">
-               <div>
+                    width="360"/>
+               <div class="list-card">
                     <h2 class="list-titel">Cashless Payment</h2>
                     <p class="list-subtitel">Marketing</p>
                 </div>
@@ -74,11 +74,11 @@
             
             </li>
             <li class="list-item list">
-                <a>
+                <a href="" class="list-link">
                     <img src="./images/img3-min.jpg" 
                     alt="Meditaion" 
                     width="360">
-                    <div>
+                    <div class="list-card">
                         <h2 class="list-titel">Meditaion App</h2>
                         <p class="list-subtitel">App</p>
                     </div>
@@ -86,44 +86,48 @@
             </li>
 
             <li class="list-item list">
-                <a>
+                <a href="" class="list-link">
                     <img src="./images/img4-min.jpg" 
                     alt="Taxi" 
-                    width="360">
-                    <div>
+                    width="360"
+                    />
+                    <div class="list-card">
                         <h2 class="list-titel">Taxi Service</h2>
                         <p class="list-subtitel">Marketing</p>
                     </div>
                 </a>
             </li>
             <li class="list-item list">
-                <a>
+                <a href="" class="list-link">
                 <img src="./images/img5-min.jpg" 
                 alt="Illustrations" 
-                width="360">
-                <div>
+                width="360"
+                />
+                <div class="list-card">
                 <h2 class="list-titel">Screen Illustrations</h2>
                 <p class="list-subtitel">Design</p>
                 </div>
                 </a>
             </li>
             <li class="list-item list">
-                <a>
+                <a href="" class="list-link">
                 <img src="./images/img6-min.jpg" 
                 alt="Courses" 
-                width="360">
-                <div>
+                width="360"
+                />
+                <div class="list-card">
                 <h2 class="list-titel">Online Courses</h2>
                 <p class="list-subtitel">Marketing</p>
                 </div>
                 </a>
             </li>
             <li class="list-item list">
-                <a>
+                <a href="" class="list-link">
                 <img src="./images/img7-min.jpg" 
                 alt="Instagram" 
-                width="360">
-                <div>
+                width="360"
+                />
+                <div class="list-card">
                 <h2 class="list-titel">Instagram Stories Concept</h2>
                 <p class="list-subtitel">Design</p>
                 </div>
@@ -131,11 +135,12 @@
             </li>
 
             <li class="list-item list">
-                <a>
+                <a href="" class="list-link">
                 <img src="./images/img8-min.jpg" 
                 alt="Organic Food" 
-                width="360">
-                <div>
+                width="360"
+                />
+                <div class="list-card">
                 <h2 class="list-titel">Organic Food</h2>
                 <p class="list-subtitel">Web Site</p>
                 </div>      
@@ -143,11 +148,12 @@
             </li>
 
             <li class="list-item list">
-                <a>
+                <a href="" class="list-link">
                 <img src="./images/img9-min.jpg" 
                 alt="Fresh Coffee" 
-                width="360">
-                <div>
+                width="360"
+                />
+                <div class="list-card">
                 <h2 class="list-titel">Fresh Coffee</h2>
                 <p class="list-subtitel">Web Site</p>
                 </div>
