--- a/portfolio.html
+++ b/portfolio.html
@@ -39,11 +39,11 @@
     
         <!--button-->
         <ul class="navigation-button">
-        <li><button type="button"class="navigation-button list">All</button></li>
-        <li><button type="button"class="navigation-button list">Web Site</button></li>
-        <li><button type="button"class="navigation-button list ">App</button></li>
-        <li><button type="button"class="navigation-button list">Design</button></li>
-        <li><button type="button"class="navigation-button list">Marketing</button></li>
+        <li  class="navigation-button-item"><button type="button"class="navigation-button list ">All</button></li>
+        <li class="navigation-button-item"><button type="button"class="navigation-button list">Web Site</button></li>
+        <li class="navigation-button-item"><button type="button"class="navigation-button list ">App</button></li>
+        <li class="navigation-button-item"><button type="button"class="navigation-button list">Design</button></li>
+        <li class="navigation-button-item"><button type="button"class="navigation-button list">Marketing</button></li>
         </ul>
         <!--Section List-->
         <section class="section">
