--- a/portfolio.html
+++ b/portfolio.html
@@ -35,30 +35,30 @@
     <main>
         <!-- section portfolio-->
     <section class="portfolio">
-        <h1 class="portfolio-titel"></h1>
+        <h1 class="visually-hidden">Our works</h1>
     
         <!--button-->
-        <ul class="navigation-button">
-        <li  class="navigation-button-item"><button type="button"class="navigation-button list ">All</button></li>
-        <li class="navigation-button-item"><button type="button"class="navigation-button list">Web Site</button></li>
-        <li class="navigation-button-item"><button type="button"class="navigation-button list ">App</button></li>
-        <li class="navigation-button-item"><button type="button"class="navigation-button list">Design</button></li>
-        <li class="navigation-button-item"><button type="button"class="navigation-button list">Marketing</button></li>
+        <ul class="button list">
+        <li  class="navigation-button-item"><button type="button"class="navigation-button">All</button></li>
+        <li class="navigation-button-item"><button type="button"class="navigation-button">Web Site</button></li>
+        <li class="navigation-button-item"><button type="button"class="navigation-button">App</button></li>
+        <li class="navigation-button-item"><button type="button"class="navigation-button">Design</button></li>
+        <li class="navigation-button-item"><button type="button"class="navigation-button">Marketing</button></li>
         </ul>
         <!--Section List-->
-        <section class="section">
-        <ul class="list-list">
-            <li class="list-item list">
+        <ul class="list works-list">
+            <li class="works-item">
+               <a href="" class="works-link"> 
                 <img 
                 src="./images/img-min.jpg"
                 alt="Banking"
                 width="360"
                 height="300"
                 />
-               <div class="list-card">
-                    <h2 class="list-titel">Banking App Interface Concept</h2>
-                    <p class="list-subtitel">App</p>
-                </div>
+               <div class="works-card">
+                    <h2 class="titel">Banking App Interface Concept</h2>
+                    <p class="works-description">App</p>
+                </div></a>
             </li>
              <li class="list-item list">
                 <img 
